@@ -2,10 +2,12 @@
 	FIM NEWS -- history of (main) user-visible changes in FIM.
 
                 Version 0.6-trunk
+# (r1003)
+ * the -B switch is now short for --background-recursive.
 # (r1002)
- * the -S switch is now short for --image-descriptions-file-separator (not anymore for --sanity-check)
+ * the -S switch is now short for --image-descriptions-file-separator (not anymore for --sanity-check).
 # (r1001)
- * the -D switch is now short for --load-image-descriptions-file (not anymore for --dump-default-fimrc)
+ * the -D switch is now short for --load-image-descriptions-file (not anymore for --dump-default-fimrc).
 # (r999,r1000)
  * introduced -L/--read-from-file switch: read an image list from file (similarly to the - switch).
 # (r971)
